rekining openen pagina met 2 links naar zakelijk en particulier pagina

--- a/parque_banque_server/src/main/resources/templates/newcompanyaccount.html
+++ b/parque_banque_server/src/main/resources/templates/newcompanyaccount.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>zakelijke rekening</title>
 </head>
 <body>
-
+<h1>Zakelijke Rekening</h1>
 </body>
 </html>
