--- a/parque_banque_server/src/main/resources/templates/newpaymentaccount.html
+++ b/parque_banque_server/src/main/resources/templates/newpaymentaccount.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Rekening openen</title>
 </head>
 <body>
+<h1>Rekening openen</h1>
+<a href="particuliereaccount">Particulier</a>
+<a href="zakelijkeaccount">Zakelijk</a>
 
 </body>
 </html>
