de links naar de pagina zijn nu knoppen, zakelijke knop en controller uitgegrijsd

--- a/parque_banque_server/src/main/resources/templates/newpaymentaccount.html
+++ b/parque_banque_server/src/main/resources/templates/newpaymentaccount.html
@@ -6,8 +6,17 @@
 </head>
 <body>
 <h1>Rekening openen</h1>
-<a href="particuliereaccount">Particulier</a>
-<a href="zakelijkeaccount">Zakelijk</a>
+
+
+<form action="particuliererekening">
+    <input type="submit" value="Particulier">
+</form>
+
+<!--
+<form action="zakelijkerekening">
+    <input type="submit" value="Zakelijk">
+</form>
+-->
 
 </body>
 </html>
