--- a/parque_banque_server/src/main/resources/templates/newprivateaccount.html
+++ b/parque_banque_server/src/main/resources/templates/newprivateaccount.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>particulier rekening</title>
+    <title>particuliere rekening</title>
 </head>
 <body>
 <h1>Particuliere Rekening</h1>
