--- a/parque_banque_server/src/main/resources/templates/signup.html
+++ b/parque_banque_server/src/main/resources/templates/signup.html
@@ -11,7 +11,10 @@
         <table>
             <tr>
                 <td> <label for="firstName">Voornaam</label> </td>
-                <td> <input id="firstName" required type="text" th:field="*{firstName}" /> </td>
+                <td> <input id="firstName" type="text" required th:field="*{firstName}"
+                            oninvalid="setCustomValidity('Voornaam is verplicht')"
+                            oninput="setCustomValidity('')"/> </td>
+<!--                <td th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}">Name Error</td>-->
             </tr>
             <tr>
                 <td> <label for="infix">Tussenvoegsel</label> </td>
@@ -19,24 +22,42 @@
             </tr>
             <tr>
                 <td> <label for="lastName">Achternaam</label> </td>
-                <td> <input id="lastName" type="text" th:field="*{lastName}" /> </td>
+                <td> <input id="lastName" type="text" required th:field="*{lastName}"
+                            oninvalid="setCustomValidity('Achternaam is verplicht')"
+                            oninput="setCustomValidity('')" /> </td>
             </tr>
-<!--            <tr>-->
-<!--                <td> <label for="street">Straat</label> </td>-->
-<!--                <td> <input id="street" type="text" /> </td>-->
-<!--            </tr>-->
-<!--            <tr>-->
-<!--                <td> <label for="number">Huisnummer</label> </td>-->
-<!--                <td> <input id="number" type="text" /> </td>-->
-<!--            </tr>-->
-<!--            <tr>-->
-<!--                <td> <label for="addition">Toevoeging</label> </td>-->
-<!--                <td> <input id="addition" type="text" /> </td>-->
-<!--            </tr>-->
-<!--            <tr>-->
-<!--                <td> <label for="postcode">Postcode</label> </td>-->
-<!--                <td> <input id="postcode" type="text" /> </td>-->
-<!--            </tr>-->
+            <tr>
+                <td> <label for="bsn">Burger Service Nummer</label> </td>
+                <td> <input id="bsn" type="text" required pattern="[0-9]{9}" th:field="*{bsn}"
+                            title="Vul uw BSN in"
+                            oninvalid="setCustomValidity('Vul een geldig BSN in')"
+                            oninput="setCustomValidity('')"/></td>
+            </tr>
+            <tr>
+                <td> <label for="street">Straatnaam</label> </td>
+                <td> <input id="street" type="text" required pattern="[A-Z. a-z-]{5,50}" th:field="*{street}"
+                            title="Minstens 5 karakters"
+                            oninvalid="setCustomValidity('Straatnaam is verplicht (minstens 5 karakters)')"
+                            oninput="setCustomValidity('')" /> </td>
+            </tr>
+            <tr>
+                <td> <label for="number">Huisnummer</label> </td>
+                <td> <input id="number" type="text" required pattern="[1-9][0-9]{0,4}" th:field="*{number}"
+                            oninvalid="setCustomValidity('Huisnummer is verplicht')"
+                            oninput="setCustomValidity('')" /> </td>
+            </tr>
+            <tr>
+                <td> <label for="addition">Toevoeging</label> </td>
+                <td> <input id="addition" type="text" pattern="[1-9a-zA-Z]" th:field="*{addition}"
+                            oninvalid="setCustomValidity('Toevoeging kan maar 1 karakter hebben')"
+                            oninput="setCustomValidity('')" /> </td>
+            </tr>
+            <tr>
+                <td> <label for="postcode">Postcode</label> </td>
+                <td> <input id="postcode" type="text" required pattern="[1-9][0-9]{3}[A-Za-z]{2}" th:field="*{postcode}"
+                            oninvalid="setCustomValidity('Postcode moet zonder spaties ingevuld worden (bijv 1111AB)')"
+                            oninput="setCustomValidity('')"/> </td>
+            </tr>
 <!--            <tr>-->
 <!--                <td> <label for="city">Woonplaats</label> </td>-->
 <!--                <td> <input id="city" type="text" /> </td>-->
