--- a/parque_banque_server/src/main/resources/templates/newpaymentaccount.html
+++ b/parque_banque_server/src/main/resources/templates/newpaymentaccount.html
@@ -8,7 +8,7 @@
 <h1>Rekening openen</h1>
 
 
-<form action="particuliererekening">
+<form action="particuliere_rekening_openen">
     <input type="submit" value="Particulier">
 </form>
 
