--- a/parque_banque_server/src/main/resources/templates/contact.html
+++ b/parque_banque_server/src/main/resources/templates/contact.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>contact page</title>
 </head>
 <body>
-
+<h1>Hier komen de contactgegevens</h1>
 </body>
 </html>
