--- a/parque_banque_server/src/main/resources/templates/zakelijke-rekening-openen.html
+++ b/parque_banque_server/src/main/resources/templates/zakelijke-rekening-openen.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Zakelijke rekening openen</title>
@@ -7,7 +7,11 @@
 <body>
 <h1>Open een zakelijke rekening</h1>
 <h2>De volgende bedrijven zijn bij ons bekend:</h2>
-<p>Dropdown</p>
+<p><select id="companyId" name="companyName">
+    <option value="BB" selected="selected">Bakkerij de Beul</option>
+    <option value="KK">Kapper ten Korten</option>
+    <option value="CV">Cafetaria de Vette Hap</option>
+</select></p>
 <!--Dropdown met bedrijfsnamen, uit DB halen o.b.v. koppeling klant&rekening -->
 <p>Selecteer het bedrijf waarvoor u een nieuwe rekening wilt openen</p> <br>
 
