homepage footer naar beneden geplaatst

--- a/parque_banque_server/src/main/resources/templates/index.html
+++ b/parque_banque_server/src/main/resources/templates/index.html
@@ -20,7 +20,7 @@
 </header>
 
 <!-- body -->
-<main>
+<main id="content">
     <div class="pbMain"align="center">
         <img src="../static/parque-banque-logo.jpg" th:src="@{parque-banque-logo.jpg}" alt="parque banque" width="1000" height="165">
 
