--- a/parque_banque_server/src/main/resources/templates/createlogin.html
+++ b/parque_banque_server/src/main/resources/templates/createlogin.html
@@ -2,33 +2,49 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Maak account</title>
+    <title>Maak account - Parque Banque</title>
 </head>
 <body>
     <h1>Vul gebruikersnaam een wachtwoord in</h1>
-    <form action="#" th:action="@{/accountview}" th:object="${createLoginFormBean}" method="post">
+    <form action="#" th:action="@{/klant-worden}" th:object="${createLoginFormBean}" method="post">
         <table>
             <tr>
-<!--                <td> <label for="bsn">BSN</label> </td>-->
-                <td> <input id="bsn" type="text" hidden readonly th:field="${createLoginFormBean.bsn}" /> </td>
+                <td> <input type="text" hidden readonly th:field="${createLoginFormBean.bsn}" /> </td>
+                <td> <input type="text" hidden readonly th:field="${createLoginFormBean.firstName}" /> </td>
+                <td> <input type="text" hidden readonly th:field="${createLoginFormBean.infix}" /> </td>
+                <td> <input type="text" hidden readonly th:field="${createLoginFormBean.lastName}" /> </td>
+                <td> <input type="text" hidden readonly th:field="${createLoginFormBean.street}" /> </td>
+                <td> <input type="text" hidden readonly th:field="${createLoginFormBean.number}" /> </td>
+                <td> <input type="text" hidden readonly th:field="${createLoginFormBean.addition}" /> </td>
+                <td> <input type="text" hidden readonly th:field="${createLoginFormBean.zipcode}" /> </td>
+                <td> <input type="text" hidden readonly th:field="${createLoginFormBean.city}" /> </td>
+                <td> <input type="text" hidden readonly th:field="${createLoginFormBean.phone}" /> </td>
+                <td> <input type="text" hidden readonly th:field="${createLoginFormBean.emailAddress}" /> </td>
             </tr>
             <tr>
                 <td> <label for="username">Gebruikersnaam</label></td>
-                <td> <input id="username" type="text" required th:field="*{username}" /></td>
+                <td> <input id="username" type="text" required pattern="[A-Za-z0-9]{5,}" th:field="*{username}"
+                            oninvalid="setCustomValidity('Gebruikersnaam moet minimaal 5 tekens lang zijn')"
+                            oninput="setCustomValidity('')" /> </td>
             </tr>
             <tr>
                 <td> <label for="password">Wachtwoord</label></td>
-                <td> <input id="password" type="password" required th:field="*{password}" onchange='check_pass()' /></td>
+                <td> <input id="password" type="password" required
+                            pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%?&]{8,}$"
+                            th:field="*{password}"
+                            title="Wachtwoord moet minstens 8 tekens lang zijn, en in elk geval een hoofdletter, een kleine letter, een cijfer een een speciaal teken (@$!%?&) bevatten"
+                            oninvalid="setCustomValidity('Wachtwoord moet minstens 8 tekens lang zijn, en in elk ' +
+                             'geval een hoofdletter, een kleine letter, een cijfer een een speciaal teken (@$!%?&) ' +
+                              'bevatten')"
+                            oninput="setCustomValidity('')" /> </td>
             </tr>
             <tr>
-                <td> <label for="confirmpassword">Bevestig wachtwoord</label></td>
-                <td> <input id="confirmpassword" type="password" required onchange='check_pass()' />
-                    <span id='message'></span>
-                </td>
+                <td> <label for="confirmpassword">Bevestig wachtwoord</label> </td>
+                <td> <input id="confirmpassword" type="password" required /> </td>
             </tr>
             <tr>
                 <td></td>
-                <td> <input type="submit" value="Verder" /></td>
+                <td> <button type="submit" name="action" value="finish">Klaar</button></td>
             </tr>
         </table>
     </form>
