kale service, backing bean, private account model

--- a/parque_banque_server/src/main/resources/templates/newprivateaccount.html
+++ b/parque_banque_server/src/main/resources/templates/newprivateaccount.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Nieuwe Particuliere Rekening Openen</h1>
-        <form action="/createprivateaccount" method="post">
+        <form action="/particuliere-rekening-openen" method="post">
 <!--    <form th:action="@{}" method="post" th:object="${PaymentAccount}">-->
         <input type="submit" name="submitbutton" value="bevestigen">
 
