NewCompanyAccountController invulformulier voor aanmelden nieuw bedrijf

--- a/parque_banque_server/src/main/resources/templates/newcompanyaccount.html
+++ b/parque_banque_server/src/main/resources/templates/newcompanyaccount.html
@@ -1,12 +1,43 @@
 <!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Nieuw bedrijf aanmaken bij Parque Banque</title>
+    <style type="text/css">
+        label {
+            display: inline-block;
+            width: 100px;
+            margin: 5px;
+            text-align: left;
+        }
+        button {
+            padding: 5px;
+            margin: 10px;
+        }
+    </style>
 </head>
 <body>
-<!--Formulier met nieuwe bedrijfsgegevens-->
+<h1>Bedrijf aanmelden bij Parque Banque</h1>
+<p>Vul hieronder de gegevens in van het bedrijf waarvoor u een rekening wilt openen:</p><br>
 
-<!--Link naar confirm company-->
+<!--Formulier met nieuwe bedrijfsgegevens-->
+<form action="#" th:action="@{/newcompanyaccount}" method="post" th:object="${company}">
+    <label>Btw-nummer</label>
+    <input type="text" th:field="*{btwNr}">
+        <br><br>
+    <label>KvK-nummer</label>
+    <input type="text" th:field="*{kvkNr}">
+        <br/><br/>
+    <label>Bedrijfsnaam</label>
+    <input type="password" th:field="*{name}">
+        <br><br>
+    <label>Sector</label>
+    <select th:field="*{sector}">
+        <!--<option th:each="p : ${sector}" th:value="${p}" th:text="${p}"/> -->
+    </select>
+        <br><br>
+    <button type="submit">Bedrijf aanmelden</button>
+</form>
 </body>
 </html>
