--- a/parque_banque_server/src/main/resources/templates/confirmcompany.html
+++ b/parque_banque_server/src/main/resources/templates/confirmcompany.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Aangemaakt bedrijf bevestigen</title>
+    <style type="text/css">
+        button {
+            padding: 5px;
+            margin: 10px;
+        }
+    </style>
 </head>
 <body>
+<h1>Controleer de bedrijfsgegevens</h1>
+<div align="left">
+    <span>BTW-nummer:</span><span th:text="${company.btwNr}"></span><br>
+    <span>KVK-nummer:</span><span th:text="${company.kvkNr}"></span><br>
+    <span>Bedrijfsnaam:</span><span th:text="${company.name}"></span><br>
+    <span>Sector:</span><span th:text="${company.getSector()}"></span><br>
+</div>
+<!--Formbean newCompanyAccountBean-->
+<button type="submit"> Rekening openen</button>
+<button type="submit"> Bedrijfsgegevens aanpassen</button><br><br>
+<button type="submit"> Annuleren, terug naar rekeningoverzicht</button>
 
 </body>
 </html>
