privateaccount model created

--- a/parque_banque_server/src/main/resources/templates/newprivateaccount.html
+++ b/parque_banque_server/src/main/resources/templates/newprivateaccount.html
@@ -6,8 +6,9 @@
 </head>
 <body>
 <h1>Nieuwe Particuliere Rekening Openen</h1>
+<h2>Weet u het zeker?</h2>
         <form action="/particuliere-rekening-openen" method="post">
-<!--    <form th:action="@{}" method="post" th:object="${PaymentAccount}">-->
+<!--    <form th:action="@{}" method="post" th:object="${}">-->
         <input type="submit" name="submitbutton" value="bevestigen">
 
     </form>
